# pyWordle

./: .gitignore  .pylintrc  LICENSE  README.md  db.sqlite3  db_v0.X.sqlite3  fill_db.py  main.py  make.bat  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
alembic/: env.py
alembic/versions/: 5d80ba97f74b_create_words_and_results_tables.py  71d46639309e_create_words_and_results_tables.py
doc/source/: conf.py  index.rst  modules.rst  pywordle.logic.rst  pywordle.logic.word_lists_parser.rst  pywordle.model.rst  pywordle.rst  pywordle.view.rst  pywordle.view.ui.rst
doc/word_lists/: sources.txt  word_list_1.txt
pywordle/: globals.py  my_globals.py
pywordle/logic/: db_manager.py  helper.py
pywordle/logic/word_lists_parser/: base_parser.py  nouns_csv.py  word_list_1.py
pywordle/model/: models.py
pywordle/view/: main_window.py
pywordle/view/ui/: main_window.ui  ui_main_window.py
pywordle/view/ui/static/: main_window.ui
test/logic/: test_db_manager.py  test_helper_functions.py
test/logic/corrupt_test_files/: pyproject.toml
test/logic/test_files/: pyproject.toml
