[tool.black]
exclude = '''
/(
  | __pycache__
  | view/ui
)/
'''

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
no_implicit_optional = true
ignore_missing_imports = true
no_site_packages = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "pywordle.view.*"
allow_untyped_calls = true

[[tool.mypy.overrides]]
module = "pywordle.view.ui.*"
allow_untyped_defs = true
allow_untyped_calls = true

[tool.poetry]
name = "pywordle"
version = "0.1.0"
description = ""
authors = ["Tutor Exilius <tutorexilius@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
alembic = "^1.7.7"
PySide2 = "^5.15.2"
toml = "^0.10.2"
more-itertools = "^8.12.0"
asyncqt = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.942"
pylint = "^2.13.3"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
